# tech_shield

./: .gitmodules  Cargo.toml  LICENSE.MD  LICENSE.txt  README.md  lib.rs
.github/workflows/: jekyll.yml
docs/: Gemfile  README.md  _config.yml
docs/_data/: contact.yml  share.yml
docs/_pages/: Introduction and Overview.md  about.md  categories.md  contact.md
docs/_posts/: .placeholder
docs/_tabs/: about.md
src/: main.rs
src/hsm/: mod.rs
src/hsm/yubikey/: key_handle.rs  provider.rs
src/tests/: key_handle_tests.rs  provider_handle_tests.rs
src/tpm/android/: mod.rs
src/yubikey/: key_handle.rs  mod.rs  provider.rs
