[package]
name = "tech_shield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yubikey = { version = "0.8.0", features = ["untested"] }
x509-cert = "0.2.5"
base64 = "0.22.1"
rsa = "0.9.6"
sha = "1.0.3"
ring = "0.17.8"
md-5 = "0.10.6"
openssl = "0.10.64"
