[package]
name = "tech_shield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yubikey = { versioin = "0.8.0", features = ["untested"]}
x509-cert = "0.2.5"
pem = "3.0.4"
base64 = "0.22.1"
der = "0.7.9"
picky-asn1 = "0.8.0"
picky-asn1-der = "0.4.1"
zeroize = "1.7.0"
#crypto_layer = { git = https://github.com/nmshd/rust-crypto.git, branch = "main"}
pkcs8 = "0.10.2"
spki = "0.7.3"
rsa = "0.9.6"
once_cell = "1.19.0"
serde = { version = "1.0.199", features = ["derive"] }
tracing = "0.1.40"
openssl = "0.10.64"
sha2 = "0.10.8"
signature = "2.2.0"
md5 = "0.7.0"
ring = "0.17.8"
log = "0.4.21"